Fixed spelling mistack of navbar

--- a/views/main/layout.ejs
+++ b/views/main/layout.ejs
@@ -28,7 +28,7 @@
     <main class="w-full sm:w-[450px] h-screen overflow-hidden mx-auto relative">
         <%- include("../components/flash.ejs") -%>
         <%- body %>
-        <%- include("../components/navbar.ejs") -%>
+        <%- include("../components/Navbar.ejs") -%>
     </main>
 
 </body>
