change some frontend for post , remove comment form post route

--- a/views/main/layout.ejs
+++ b/views/main/layout.ejs
@@ -25,7 +25,7 @@
 </head>
 
 <body class="scroll-smooth">
-    <main class="w-full sm:w-[450px] h-screen overflow-hidden mx-auto relative">
+    <main class="w-full sm:w-[450px] h-dvh overflow-hidden mx-auto relative">
         <%- include("../components/flash.ejs") -%>
         <%- body %>
         <%- include("../components/navbar.ejs") -%>
