--- a/views/post/allPost.ejs
+++ b/views/post/allPost.ejs
@@ -60,7 +60,7 @@
 
 
         <% for(let post of posts.reverse()) {%>
-            <div class="m-2 p-2 sm:p-5 sm:border border-black rounded-xl">
+            <div class="m-2 p-2 p-5 border border-black rounded-xl">
                 <div class="flex text-sm gap-x-3">
                     <img class="h-12 w-12 rounded-full object-cover" loading="lazy" src="<%= post.user.photo.path %>"
                         alt="profile_pic">
