--- a/views/post/singlePost.ejs
+++ b/views/post/singlePost.ejs
@@ -1,9 +1,9 @@
 <% layout('./main/layout') %>
     <section class="h-screen overflow-auto pb-16">
-        <div class="border border-black  rounded-xl py-4 my-6">
+        <div class="border border-black  rounded-xl py-4 my-6 mx-2">
             <h1 class="text-xl font-bold text-center" >SnapNest</h1>
         </div>
-        <div class="m-2 p-2 sm:p-5 sm:border border-black rounded-xl">
+        <div class="m-2 p-5 border border-black rounded-xl">
             <div class="flex text-sm gap-x-3">
                 <img class="h-14 w-14 rounded-full object-cover" loading="lazy" src="<%= post.user.photo.path %>"
                     alt="profile_pic">
