--- a/views/user/profilePage.ejs
+++ b/views/user/profilePage.ejs
@@ -7,31 +7,39 @@
       <div class="w-full flex items-center justify-between">
          <img class="h-20 w-20 rounded-full object-cover" src="<%=user.photo.path %>" alt="user_Image">
          <span class="flex items-center flex-col justify-center">
-            <p><%= createdPosts.length %></p>
+            <p>
+               <%= createdPosts.length %>
+            </p>
             <p>Post</p>
          </span>
          <span class="flex items-center flex-col justify-center">
-            <p><%= user.follower.length %></p>
+            <p>
+               <%= user.follower.length %>
+            </p>
             <p>Followers</p>
          </span class="flex items-center flex-col justify-center">
          <span class="flex items-center flex-col justify-center">
-            <p><%= user.following.length %></p>
+            <p>
+               <%= user.following.length %>
+            </p>
             <p>Following</p>
          </span>
       </div>
-      <div class="mt-4">
-         <p><%- (user.bio || 'No bio available.').replace(/\r\n/g, '<br>') %></p>
+      <div class="my-5">
+         <p><%- (user.bio || 'No bio available.' ).replace(/\r\n/g, '<br>' ) %></p>
       </div>
       <% if(user.username===currentUser.username) {%>
          <a href="/user/profile/edit"
             class="border w-full p-2 rounded-lg border-black my-4 inline-block text-center">Edit profile</a>
          <% } else { %>
             <form action="/follow/<%= user._id %>" method="POST">
-               <button class="border w-full p-2 rounded-lg border-black my-4"><%=  user.follower.includes(currentUser._id) ? 'Unfollow' : 'Follow' %></button>
+               <button class="border w-full p-2 rounded-lg border-black my-4">
+                  <%= user.follower.includes(currentUser._id) ? 'Unfollow' : 'Follow' %>
+               </button>
             </form>
             <% } %>
 
-               <div class="flex items-center justify-evenly">
+               <div class="flex items-center justify-evenly mb-3">
                   <span id="savePostBtn"
                      class="w-1/2 border-b border-black  flex items-center justify-center pt-2 pb-4">
                      <svg class="w-8 h-8 cursor-pointer" viewBox="0 -0.5 18 18" xmlns="http://www.w3.org/2000/svg"
@@ -58,22 +66,22 @@
                      </svg>
                   </span>
                </div>
-            
+
 
                <div id="savePostSection" class="grid gap-2 py-2 sm:py-4 grid-cols-3">
                   <% if(!createdPosts.length) {%>
-                  <div class="col-span-3 flex items-center flex-col py-6">
-                     <img class="w-60 " src="/img/no-post.png" alt="no-post-image">
-                     <p class="text-sm my-2">No posts available. Please upload one to get started</p>
-                  </div>
-                  <% } %>
-
-                  <% for(let post of createdPosts) {%>
-                     <a href="/post/<%=post._id %>">
-                        <img class="h-48 bg-black object-contain font-medium" loading="lazy" src="<%= post.photo.path %>"
-                           alt="images">
-                     </a>
+                     <div class="col-span-3 flex items-center flex-col py-6">
+                        <img class="w-60 " src="/img/no-post.png" alt="no-post-image">
+                        <p class="text-sm my-2">No posts available. Please upload one to get started</p>
+                     </div>
                      <% } %>
+
+                        <% for(let post of createdPosts.reverse()) {%>
+                           <a href="/post/<%=post._id %>">
+                              <img class="h-48 bg-black object-contain font-medium" loading="lazy"
+                                 src="<%= post.photo.path %>" alt="images">
+                           </a>
+                           <% } %>
                </div>
                <div id="saveOtherPostSection" class="grid gap-2 py-2 sm:py-4 grid-cols-3 hidden">
                   <% if(!savedPosts.length) {%>
@@ -82,17 +90,17 @@
                         <p class="text-sm my-2 font-medium">No posts saved.</p>
                      </div>
                      <% } %>
-                  <% for(let post of savedPosts) {%>
-                     
-                     <a href="/post/<%=post._id %>">
-                        <img class="h-48 bg-black object-contain" loading="lazy" src="<%= post.photo.path %>"
-                           alt="images">
-                     </a>
-                     
-                     <% } %>
+                        <% for(let post of savedPosts) {%>
+
+                           <a href="/post/<%=post._id %>">
+                              <img class="h-48 bg-black object-contain" loading="lazy" src="<%= post.photo.path %>"
+                                 alt="images">
+                           </a>
+
+                           <% } %>
                </div>
 
-   
+
    </section>
 
    <script>
