--- a/views/components/Navbar.ejs
+++ b/views/components/Navbar.ejs
@@ -1,19 +1,77 @@
-<nav class="sticky bottom-0 bg-white w-full py-2 flex items-center justify-evenly z-40">
-<a href="/post/all">
-    <svg class="h-8 w-8 cursor-pointer" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M1 6V15H6V11C6 9.89543 6.89543 9 8 9C9.10457 9 10 9.89543 10 11V15H15V6L8 0L1 6Z" fill="#000000"></path> </g></svg>
-</a>
-<a href="/user/search">
-    <svg class="h-9 w-9 cursor-pointer" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M15.7955 15.8111L21 21M18 10.5C18 14.6421 14.6421 18 10.5 18C6.35786 18 3 14.6421 3 10.5C3 6.35786 6.35786 3 10.5 3C14.6421 3 18 6.35786 18 10.5Z" stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path> </g></svg>
-</a>
-<a href="/post/create">
-    <svg class="h-10 w-10 cursor-pointer" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <circle cx="12" cy="12" r="10" stroke="#000000" stroke-width="1.5"></circle> <path d="M15 12L12 12M12 12L9 12M12 12L12 9M12 12L12 15" stroke="#000000" stroke-width="1.5" stroke-linecap="round"></path> </g></svg>
-</a>
-<a href="/notification/">
-    <svg class="h-9 w-9 cursor-pointer"  viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M22 10.5V12C22 16.714 22 19.0711 20.5355 20.5355C19.0711 22 16.714 22 12 22C7.28595 22 4.92893 22 3.46447 20.5355C2 19.0711 2 16.714 2 12C2 7.28595 2 4.92893 3.46447 3.46447C4.92893 2 7.28595 2 12 2H13.5" stroke="#000000" stroke-width="1.5" stroke-linecap="round"></path> <circle cx="19" cy="5" r="3" stroke="#000000" stroke-width="1.5"></circle> <path d="M7 14H16" stroke="#000000" stroke-width="1.5" stroke-linecap="round"></path> <path d="M7 17.5H13" stroke="#000000" stroke-width="1.5" stroke-linecap="round"></path> </g></svg>
-</a>
+<nav
+    class="absolute bg-black bg-[#09090A] md:p-6 bottom-0 md:relative text-white md:w-1/3 xl:w-1/6 w-full border-r border-black py-4 flex flex-row md:flex-col items-center  md:justify-start md:space-y-2 justify-evenly z-40 md:h-screen ">
+    <h1 class="text-2xl font-bold text-center hidden md:block ml-4 my-6">SnapNest</h1>
 
-<a href="/user/profile/<%= currentUser.username %>">
-    <img class="h-10 w-10 cursor-pointer object-cover rounded-full"  src="<%= currentUser.photo.path  %>" alt="">
-</a>
-  
+    <a href="/post/all" class="  flex items-center md:gap-x-3  underline-offset-4 hover:bg-[#1A1A1A] w-fit md:w-full md:px-4 md:py-4 rounded-xl">
+        <svg class="h-8 w-8 cursor-pointer" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+            <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+            <g id="SVGRepo_iconCarrier">
+                <path stroke="#fff" d="M1 6V15H6V11C6 9.89543 6.89543 9 8 9C9.10457 9 10 9.89543 10 11V15H15V6L8 0L1 6Z"
+                    fill="#000000"></path>
+            </g>
+        </svg>
+        <p class="hidden md:inline-block">Home</p>
+    </a>
+    <a href="/user/search" class="  flex items-center md:gap-x-3  underline-offset-4 hover:bg-[#1A1A1A] w-fit md:w-full md:px-4 md:py-4 rounded-xl">
+        <svg class="h-9 w-9 cursor-pointer" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+            <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+            <g id="SVGRepo_iconCarrier">
+                <path
+                    d="M15.7955 15.8111L21 21M18 10.5C18 14.6421 14.6421 18 10.5 18C6.35786 18 3 14.6421 3 10.5C3 6.35786 6.35786 3 10.5 3C14.6421 3 18 6.35786 18 10.5Z"
+                    stroke="#fff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
+            </g>
+        </svg>
+        <p class="hidden md:inline-block">Search</p>
+    </a>
+    <a href="/post/create" class="  flex items-center md:gap-x-3  underline-offset-4 hover:bg-[#1A1A1A] w-fit md:w-full md:px-4 md:py-4 rounded-xl">
+        <svg class="h-10 w-10 cursor-pointer" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+            <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+            <g id="SVGRepo_iconCarrier">
+                <circle cx="12" cy="12" r="10" stroke="#fff" stroke-width="1.5"></circle>
+                <path d="M15 12L12 12M12 12L9 12M12 12L12 9M12 12L12 15" stroke="#fff" stroke-width="1.5"
+                    stroke-linecap="round"></path>
+            </g>
+        </svg>
+        <p class="hidden md:inline-block">Add new Post</p>
+    </a>
+    <a href="/notification/" class="  flex items-center md:gap-x-3  underline-offset-4 hover:bg-[#1A1A1A] w-fit md:w-full md:px-4 md:py-4 rounded-xl">
+        <svg class="h-9 w-9 cursor-pointer" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+            <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+            <g id="SVGRepo_iconCarrier">
+                <path
+                    d="M22 10.5V12C22 16.714 22 19.0711 20.5355 20.5355C19.0711 22 16.714 22 12 22C7.28595 22 4.92893 22 3.46447 20.5355C2 19.0711 2 16.714 2 12C2 7.28595 2 4.92893 3.46447 3.46447C4.92893 2 7.28595 2 12 2H13.5"
+                    stroke="#fff" stroke-width="1.5" stroke-linecap="round"></path>
+                <circle cx="19" cy="5" r="3" stroke="#fff" stroke-width="1.5"></circle>
+                <path d="M7 14H16" stroke="#fff" stroke-width="1.5" stroke-linecap="round"></path>
+                <path d="M7 17.5H13" stroke="#fff" stroke-width="1.5" stroke-linecap="round"></path>
+            </g>
+        </svg>
+        <p class="hidden md:inline-block">Notifcation</p>
+    </a>
+
+    <a href="/user/profile/<%= currentUser.username %>" class="  flex items-center gap-x-3 hover:bg-[#1A1A1A] w-fit md:w-full md:px-4 md:py-4 rounded-xl">
+        <img class="h-10 w-10 cursor-pointer object-cover rounded-full" src="<%= currentUser.photo.path  %>" alt="">
+        <p class="hidden md:inline-block">
+            <%= currentUser.username %>
+        </p>
+    </a>
+
+    <a href="/user/logout" class="  items-center absolute bottom-4 md:gap-x-3 hidden md:flex underline-offset-4 hover:bg-[#1A1A1A] px-4 md:py-4 rounded-xl hover:bg-[#1A1A1A] w-fit md:w-[80%] px-4 py-4 rounded-xl">
+        <svg class="h-10 w-10 cursor-pointer object-cover rounded-full" viewBox="0 -0.5 25 25" fill="none"
+            xmlns="http://www.w3.org/2000/svg" stroke="#fff" stroke-width="0.00025">
+            <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+            <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+            <g id="SVGRepo_iconCarrier">
+                <path 
+                    d="M11.75 9.874C11.75 10.2882 12.0858 10.624 12.5 10.624C12.9142 10.624 13.25 10.2882 13.25 9.874H11.75ZM13.25 4C13.25 3.58579 12.9142 3.25 12.5 3.25C12.0858 3.25 11.75 3.58579 11.75 4H13.25ZM9.81082 6.66156C10.1878 6.48991 10.3542 6.04515 10.1826 5.66818C10.0109 5.29121 9.56615 5.12478 9.18918 5.29644L9.81082 6.66156ZM5.5 12.16L4.7499 12.1561L4.75005 12.1687L5.5 12.16ZM12.5 19L12.5086 18.25C12.5029 18.25 12.4971 18.25 12.4914 18.25L12.5 19ZM19.5 12.16L20.2501 12.1687L20.25 12.1561L19.5 12.16ZM15.8108 5.29644C15.4338 5.12478 14.9891 5.29121 14.8174 5.66818C14.6458 6.04515 14.8122 6.48991 15.1892 6.66156L15.8108 5.29644ZM13.25 9.874V4H11.75V9.874H13.25ZM9.18918 5.29644C6.49843 6.52171 4.7655 9.19951 4.75001 12.1561L6.24999 12.1639C6.26242 9.79237 7.65246 7.6444 9.81082 6.66156L9.18918 5.29644ZM4.75005 12.1687C4.79935 16.4046 8.27278 19.7986 12.5086 19.75L12.4914 18.25C9.08384 18.2892 6.28961 15.5588 6.24995 12.1513L4.75005 12.1687ZM12.4914 19.75C16.7272 19.7986 20.2007 16.4046 20.2499 12.1687L18.7501 12.1513C18.7104 15.5588 15.9162 18.2892 12.5086 18.25L12.4914 19.75ZM20.25 12.1561C20.2345 9.19951 18.5016 6.52171 15.8108 5.29644L15.1892 6.66156C17.3475 7.6444 18.7376 9.79237 18.75 12.1639L20.25 12.1561Z"
+                    fill="#fff"></path>
+            </g>
+        </svg>
+        <p class="hidden md:inline-block">Logout</p>
+    </a>
+
 </nav>
