--- a/views/main/layout.ejs
+++ b/views/main/layout.ejs
@@ -25,10 +25,10 @@
 </head>
 
 <body class="scroll-smooth">
-    <main class="w-full sm:w-[450px] h-screen overflow-hidden mx-auto relative">
+    <main class="w-full md:flex md:justify-start bg-black text-white h-screen overflow-hidden mx-auto relative">
         <%- include("../components/flash.ejs") -%>
-        <%- body %>
         <%- include("../components/Navbar.ejs") -%>
+        <%- body %>
     </main>
 
 </body>
