--- a/views/notification/showNotification.ejs
+++ b/views/notification/showNotification.ejs
@@ -1,5 +1,5 @@
 <% layout('./main/layout') %>
-<section class="h-screen overflow-auto">
+<section class="h-screen overflow-auto px-4 mx-auto w-full md:w-2/5">
     <h1 class="text-xl my-6 font-bold px-2">Notification</h1>
     <% if (!notifications.length) { %>
         <div class="flex items-center flex-col justify-center h-3/4">
@@ -11,12 +11,12 @@
     <% } else { %>
         <% for (let notification of notifications.reverse()) { %>
             <% const profileImg = notification.fromUser?.photo?.path || '/default-profile.jpg'; %>
-            <a href="<%= notification.type === 'follow' ? `/user/profile/${currentUser.username}` : `/post/${notification.post._id}` %>">
-                <div class="flex items-center justify-between cursor-pointer hover:bg-zinc-100 py-4 px-4 rounded-md">
-                    <img class="w-12 h-12 bg-red-400 rounded-full object-cover" src="<%= profileImg %>" alt="profile">
+            <a href="<%= notification.type === 'follow' ? `/user/profile/${currentUser.username}` : notification.post ? `/post/${notification.post._id}` : '#' %>">
+                <div class="flex items-center justify-between cursor-pointer hover:bg-[#1F1F22] py-4 px-4 rounded-md">
+                    <img class="w-12 h-12 rounded-full object-cover" src="<%= profileImg %>" alt="profile">
                     <p class="w-full px-4">
                         <%= notification.message %>
-                        <span class="text-zinc-500 ml-2"><%= notification.formattedCreatedAt %></span>
+                        <span class="text-[#44445B] font-medium ml-2"><%= notification.formattedCreatedAt %></span>
                     </p>
                     <% if (notification.type !== 'follow') { %>
                         <img class="h-12 w-12 rounded-md object-cover" src="<%= notification.post?.photo?.path || '/default-post.jpg' %>" alt="">
