--- a/views/user/editProfilePage.ejs
+++ b/views/user/editProfilePage.ejs
@@ -1,29 +1,29 @@
 <% layout('./main/layout') %>
-    <section class="h-screen overflow-auto border border-black flex items-center flex-col w-full pb-16">
+    <section class="h-screen w-full md:w-3/5 mx-auto overflow-auto flex items-center flex-col ">
         <h1 class="text-center font-bold text-xl my-4">Edit Profile</h1>
         <!-- user profile edit  -->
         <form class="w-full" action="/user/profile/edit?_method=PUT" method="POST" enctype="multipart/form-data" data-image-required="false">
-            <div class="flex w-full flex-col items-center space-y-3 py-4 w-full">
+            <div class="flex w-full flex-col md:flex-row md:justify-between items-center space-y-3 py-4 w-full">
                 <img id="image-preview" class="h-20 w-20 rounded-full object-cover" src="<%= user.photo.path %>" alt="user_image">
                 <input id="image-input" class="hidden" type="file" name="photo">
-                <button class="bg-black py-2 text-white px-4 mb-3 rounded-xl mx-4" type="button" id="upload-btn">Change Profile Page</button>
+                <button class="bg-white py-2 text-black px-4 mb-3 rounded-xl mx-4" type="button" id="upload-btn">Change Profile Page</button>
             </div>
             <div class="border-y-2 py-4 px-6 w-full">
                 <div class="flex items-center mb-5">
                     <label class="pr-4 w-1/4" for="name">Name</label>
-                    <input class="pl-2 border-b border-black focus:outline-none w-3/4 py-2" type="text"
+                    <input class="pl-2 border-b border-black focus:outline-none w-3/4 py-2 bg-black" type="text"
                         value="<%= user.name %>" name="name" placeholder="Enter Your Name">
                 </div>
 
                 <div class="flex items-center mb-5 ">
                     <label class="pr-4 w-1/4" for="username">Username</label>
-                    <input class="pl-2 border-b border-black focus:outline-none w-3/4 py-2" type="text"
+                    <input class="pl-2 border-b border-black focus:outline-none w-3/4 py-2 bg-black" type="text"
                         value="<%= user.username %>" name="username" placeholder="Enter Your username" readonly>
                 </div>
 
                 <div class="flex items-center mb-5">
                     <label class="pr-4 w-1/4" for="username">Bio</label>
-                    <textarea class="pl-2 border-b border-black focus:outline-none w-3/4 py-2"
+                    <textarea class="pl-2 border-b border-black focus:outline-none w-3/4 py-2 bg-black"
                         name="bio" id="bio" placeholder="Enter Bio"><%= user.bio %></textarea>
                 </div>
 
@@ -31,19 +31,19 @@
             <div class="py-4 px-6 w-full">
                 <div class="flex items-center mb-5">
                     <label class="pr-4 w-1/4" for="name">Email</label>
-                    <input class="pl-2 border-b border-black focus:outline-none w-3/4 py-2" value="<%= user.email %>"
+                    <input class="pl-2 border-b border-black focus:outline-none w-3/4 py-2 bg-black" value="<%= user.email %>"
                         type="email" name="email" placeholder="Enter Your email">
                 </div>
 
                 <div class="flex items-center mb-5">
                     <label class="pr-4 w-1/4" for="numberInput">Phone</label>
-                    <input class="pl-2 border-b border-black focus:outline-none w-3/4 py-2" type="text"
+                    <input class="pl-2 border-b border-black focus:outline-none w-3/4 py-2 bg-black" type="text"
                         value="<%= user.phone %>"   maxlength="10" id="numberInput" name="phone" placeholder="Enter Your phone" required>
                 </div>
                 <div class="flex items-center mb-5">
                     <label class="pr-4 w-1/4" for="username">Gender</label>
             
-                        <select class="pl-2 border-b border-black focus:outline-none w-3/4 py-2" name="gender" id="gender">
+                        <select class="pl-2 border-b border-black focus:outline-none w-3/4 py-2 bg-black" name="gender" id="gender">
                             <option value="" <%= !user.gender ? 'selected' : '' %>>Select</option>
                             <option value="male" <%= user.gender === 'male' ? 'selected' : '' %>>Male</option>
                             <option value="female" <%= user.gender === 'female' ? 'selected' : '' %>>Female</option>
@@ -51,7 +51,9 @@
                           </select>
                 </div>
             </div>
-            <button class="bg-black py-2 text-white w-[90%] mb-3 rounded-xl mx-4">Submit</button>
+            <div class="w-full md:w-1/2 mx-auto flex items-center justify-center">
+                <button id="toggleButton" class="bg-white w-full font-semibold hover:bg-black hover:border border-white hover:text-white px-4 py-2 rounded-xl text-sm my-4 text-black">Submit</button>
+            </div>
         </form>
     </section>
 
