--- a/views/user/signUp.ejs
+++ b/views/user/signUp.ejs
@@ -9,36 +9,51 @@
 </head>
 
 <body>
-    <section class="w-full sm:w-[450px] mx-auto h-screen flex items-center flex-col sm:justify-evenly py-4">
-        <div>
-            <img class="w-60" src="https://i.pinimg.com/originals/5c/37/14/5c3714cba608140b1d6c15ce3f699068.gif"
-                alt="logo_user">
-            <h1 class="text-2xl font-bold my-4 text-center">SignUp</h1>
+
+    <section class="w-full flex items-center justify-center h-[100vh] text-white bg-black">
+        <div class="w-full md:w-1/2 h-full flex items-center justify-center  flex-col">
+            <div class="flex items-center flex-col my-4">
+                <h1 class="text-3xl sm:text-4xl font-bold my-1 text-center">SnapNest</h1>
+            </div>
+            <p class="text-xl md:text-2xl max-[330px]:px-6 font-bold my-1 text-center">Access your main account</p>
+            <p class="text-xs md:text-sm text-[#6878A3]">To use SnapNest, please enter your details</p>
+
+            <form action="/user/signin" method="POST" class="w-3/5 flex items-center justify-center flex-col">
+                <div class="mb-4 w-full sm:w-full">
+                    <label class="mb-1 inline-block" for="name">Name</label>
+                    <input type="text" class="w-full text-black bg-zinc-200 rounded-md pl-2 focus:outline-none py-2" name="name"
+                        placeholder="Enter Your name" required>
+                </div>
+                <div class="mb-4 w-full sm:w-full">
+                    <label class="mb-1 inline-block" for="name">Username</label>
+                    <input type="text" class="w-full text-black bg-zinc-200 rounded-md pl-2 focus:outline-none py-2"
+                        name="username" placeholder="Enter Username" required>
+                </div>
+                <div class="mb-4 w-full sm:w-full">
+                    <label class="mb-1 inline-block" for="name">Email</label>
+                    <input type="email" class="w-full text-black bg-zinc-200 rounded-md pl-2 focus:outline-none py-2" name="email"
+                        placeholder="Enter email" required>
+                </div>
+                <div class="mb-4 w-full sm:w-full">
+                    <label class="mb-1 inline-block" for="name">Password</label>
+                    <input type="password" class="w-full text-black bg-zinc-200 rounded-md pl-2 focus:outline-none py-2"
+                        name="password" placeholder="Enter password" required>
+                </div>
+                <div class="w-[90%] sm:w-full">
+
+                    <button
+                        class="bg-white w-full font-semibold hover:bg-black hover:border border-white hover:text-white px-4 py-2 rounded-md text-sm my-4 text-black">Register</button>
+                </div>
+            </form>
+
+            <p class="my-6 text-sm text-center">Already having an account <a class="text-blue-500 hover:underline"
+                    href="/user/signin">SignIn</a></p>
+
         </div>
-        <form action="/user/signin" method="POST" class="w-3/4 flex items-center justify-center flex-col">
-            <div class="mb-4 w-full">
-                <label class="mb-1 inline-block" for="name">Name</label>
-                <input type="text" class="w-full bg-zinc-200 rounded-md pl-2 focus:outline-none py-2" name="name"
-                    placeholder="Enter Your name" required>
-            </div>
-            <div class="mb-4 w-full">
-                <label class="mb-1 inline-block" for="name">Username</label>
-                <input type="text" class="w-full bg-zinc-200 rounded-md pl-2 focus:outline-none py-2" name="username"
-                    placeholder="Enter Username" required>
-            </div>
-            <div class="mb-4 w-full">
-                <label class="mb-1 inline-block" for="name">Email</label>
-                <input type="email" class="w-full bg-zinc-200 rounded-md pl-2 focus:outline-none py-2" name="email"
-                    placeholder="Enter email" required>
-            </div>
-            <div class="mb-4 w-full">
-                <label class="mb-1 inline-block" for="name">Password</label>
-                <input type="password" class="w-full bg-zinc-200 rounded-md pl-2 focus:outline-none py-2"
-                    name="password" placeholder="Enter password" required>
-            </div>
-            <button class="bg-black px-4 py-2 text-white mb-3 rounded-xl mx-4 hover:bg-white border hover:text-black border-black">Register</button>
-        </form>
-        <p class="my-9 lg:my-4 ">Already having an account <a class="text-blue-500 hover:underline" href="/user/signin">Signin</a></p>
+
+        <img class="hidden md:block w-full md:w-1/2 h-full object-cover"
+            src="https://scontent.famd1-2.fna.fbcdn.net/v/t39.30808-6/452925431_1020228286770006_1678135576219625091_n.jpg?_nc_cat=104&ccb=1-7&_nc_sid=cc71e4&_nc_ohc=bBozDn0i6dsQ7kNvgGQ-rxc&_nc_zt=23&_nc_ht=scontent.famd1-2.fna&_nc_gid=AcDqU-U6x4ABKPZ3hSAWFfW&oh=00_AYCbpEtEesd2OtjgcEVoWszQZGbw-4A_W1mKHeKlbgL8kQ&oe=677A1670"
+            alt="user_img">
     </section>
 </body>
 
