--- a/views/user/signUp.ejs
+++ b/views/user/signUp.ejs
@@ -52,7 +52,7 @@
         </div>
 
         <img class="hidden md:block w-full md:w-1/2 h-full object-cover"
-            src="https://scontent.famd1-2.fna.fbcdn.net/v/t39.30808-6/452925431_1020228286770006_1678135576219625091_n.jpg?_nc_cat=104&ccb=1-7&_nc_sid=cc71e4&_nc_ohc=bBozDn0i6dsQ7kNvgGQ-rxc&_nc_zt=23&_nc_ht=scontent.famd1-2.fna&_nc_gid=AcDqU-U6x4ABKPZ3hSAWFfW&oh=00_AYCbpEtEesd2OtjgcEVoWszQZGbw-4A_W1mKHeKlbgL8kQ&oe=677A1670"
+            src="/img/image.jpg"
             alt="user_img">
     </section>
 </body>
