--- a/views/post/addNewPost.ejs
+++ b/views/post/addNewPost.ejs
@@ -1,5 +1,5 @@
 <% layout('./main/layout') %>
-    <section class="p-3 h-screen overflow-auto w-full md:w-1/2 lg:w-1/3 mx-auto">
+    <section class="p-3 h-screen overflow-auto w-full md:w-1/2 lg:w-1/3 mx-auto pb-16">
         <h1 class="text-xl font-bold my-2">Add new Post</h1>
         <form id="toggleForm" action="/post/create" method="POST" enctype="multipart/form-data"
             data-image-required="true">
