--- a/views/main/layout.ejs
+++ b/views/main/layout.ejs
@@ -30,7 +30,7 @@
 
 
         <%- include("../components/flash.ejs") -%>
-        <%- include("../components/Navbar.ejs") -%>
+        <%- include("../components/navbar.ejs") -%>
         <%- body %>
     </main>
 
