--- a/views/user/editProfilePage.ejs
+++ b/views/user/editProfilePage.ejs
@@ -1,5 +1,5 @@
 <% layout('./main/layout') %>
-    <section class="h-screen w-full md:w-3/5 mx-auto overflow-auto flex items-center flex-col ">
+    <section class="h-screen w-full md:w-3/5 mx-auto overflow-auto flex items-center flex-col pb-16">
         <h1 class="text-center font-bold text-xl my-4">Edit Profile</h1>
         <!-- user profile edit  -->
         <form class="w-full" action="/user/profile/edit?_method=PUT" method="POST" enctype="multipart/form-data" data-image-required="false">
